--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.4
+  # video_player: ^2.2.7
+  youtube_player_flutter: ^8.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
